# RaspberryPiSystem_002

./: .coderabbit.yaml  .dockerignore  .gitignore  .gitleaks.toml  .trivyignore  AGENTS.md  AI_CONSULTATION_REQUEST.md  AI_HANDOFF_PROMPT.txt  CHANGES_SUMMARY.md  CI_TESTING_BEST_PRACTICES.md  DIAGNOSIS.md  EXEC_PLAN.md  MODULE_ARCHITECTURE.md  README.md  REFACTORING_PLAN.md  REFACTORING_RESULTS.md  check_api_logs.sh  get_debug_logs.sh  package.json  playwright.config.ts  pnpm-lock.yaml  production-schedule-note-preview.html  production-schedule-progress-preview.html  production-schedule-resource-filter-dropdown-preview.html  test-machine-csv-import.mjs  tsconfig.base.json  turbo.json
.github/: BRANCH_PROTECTION_SETUP.md
.husky/: pre-commit
clients/barcode-agent/: .env.example  README.md  pyproject.toml
clients/barcode-agent/barcode_agent/: __init__.py  __main__.py  config.py  main.py  serial_reader.py
clients/haizen-agent/: README.md  haizen-agent.service  pyproject.toml
clients/haizen-agent/haizen_agent/: __init__.py  api_client.py  classifier.py  config.py  distribution_gate.py  hid_wedge.py  main.py
clients/haizen-agent/tests/: test_classifier.py  test_tls_config.py
clients/nfc-agent/: .env.example  README.md  pyproject.toml
clients/nfc-agent/nfc_agent/: __init__.py  __main__.py  config.py  main.py  queue_store.py  reader.py  resend_worker.py  ts100_hid.py
clients/nfc-agent/tests/: test_queue_event_identity.py
clients/torque-agent/: .env.example  README.md  pyproject.toml
clients/torque-agent/tests/: test_agent_core.py  test_capture_kit.py  test_hid_reader.py
clients/torque-agent/tests/fixtures/capture_contract/: fixture-contract.json  synthetic-key-events.jsonl
clients/torque-agent/tests/fixtures/capture_contract/SYNTHETIC_A/: above_limit.jsonl  below_limit.jsonl  normal.jsonl  rapid_consecutive.jsonl  repeated_memory.jsonl
clients/torque-agent/tests/fixtures/cem3_btla/SERIAL_A/: bad_number.jsonl  missing_field.jsonl  normal.jsonl  partial.jsonl  rapid_consecutive.jsonl  unsupported_unit.jsonl
clients/torque-agent/torque_agent/: __init__.py  api_client.py  binding.py  capture_cli.py  capture_fixtures.py  capture_models.py  capture_recorder.py  cem3_btla_parser.py  config.py  connection_lease.py  delivery.py  hid_line_decoder.py  hid_reader.py  ingestor.py  linux_event_source.py  main.py  models.py  parser_registry.py  queue_store.py  websocket_stream.py
clients/torque-agent/torque_agent/schemas/: capture_fixture.schema.json
design-previews/: kiosk-assembly-home-wip-first-preview.html  kiosk-mobile-pallet-viz.html
docs/: AI_HANDOFF_PROMPT.md  AI_START_HERE.md  INDEX.md  REFACTORING_PLAN.md  index.html  privacy-policy.html
e2e/: admin.spec.ts  (+12 more)
(+4420 files in other folders)
