[tool.poetry]
name = "barcode-agent"
version = "0.1.0"
description = "USBシリアル(CDC ACM)バーコードリーダー用ローカルブリッジ（WebSocket）"
authors = ["Factory Systems <factory@example.com>"]
readme = "README.md"
packages = [{ include = "barcode_agent" }]

[tool.poetry.dependencies]
python = "^3.11"
pyserial = "^3.5"
fastapi = "^0.111.0"
uvicorn = { version = "^0.29.0", extras = ["standard"] }
python-dotenv = "^1.0.1"

[tool.poetry.group.dev.dependencies]
pytest = "^8.2.0"
pytest-asyncio = "^0.23.6"
ruff = "^0.4.2"

[build-system]
requires = ["poetry-core>=1.6.1"]
build-backend = "poetry.core.masonry.api"
