[tool.poetry]
name = "torque-agent"
version = "0.1.0"
description = "Exclusive HID torque-wrench bridge with a durable SQLite outbox"
authors = ["Factory Systems <factory@example.com>"]
readme = "README.md"
packages = [{ include = "torque_agent" }]
include = ["torque_agent/schemas/*.json"]

[tool.poetry.dependencies]
python = "^3.11"
evdev = "^1.7.0"
fastapi = "^0.139.2"
uvicorn = { version = "^0.29.0", extras = ["standard"] }
httpx = "^0.27.0"
python-dotenv = "^1.0.1"

[tool.poetry.group.dev.dependencies]
pytest = "^8.2.0"
pytest-asyncio = "^0.23.6"
ruff = "^0.4.2"

[tool.poetry.scripts]
torque-capture = "torque_agent.capture_cli:main"

[build-system]
requires = ["poetry-core>=1.6.1"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 120
target-version = "py311"
